tests/cases/standard-library/errors/prelude/prelude-result-arity.ari
fn main() -> i64 {
  let value: Result[i64] = 0;
  return value;
}
